[gd_scene load_steps=3 format=3 uid="uid://enemy001"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_enemy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_body"]
radius = 20.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_enemy")

[node name="Sprite" type="Polygon2D" parent="."]
color = Color(0.9, 0.2, 0.2, 1)
polygon = PackedVector2Array(-20, -20, 20, -20, 20, 20, -20, 20)

[node name="DirectionIndicator" type="Polygon2D" parent="."]
color = Color(0.7, 0.1, 0.1, 1)
polygon = PackedVector2Array(16, -6, 28, 0, 16, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_body")

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="HitFlashTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="timeout" from="HitFlashTimer" to="." method="_on_hit_flash_timer_timeout"]
